deployment/kuadrant-openshift/keycloak/07-keycloak-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: keycloak-route
  namespace: keycloak-system
  labels:
    app: keycloak
spec:
  host: keycloak.apps.maas2.octo-emerging.redhataicoe.com
  port:
    targetPort: http
  to:
    kind: Service
    name: keycloak
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None
